tests/ui/type_mismatch.stderr
error: generic type parameter `Id { data: "bool" }` not among in-scope parameters: []
 --> $DIR/type_mismatch.rs:4:5
  |
4 |     public class java.lang.Object {
  |     ^^^^^^

error: aborting due to previous error

